gcc/testsuite/g++.dg/cpp1y/Wnarrowing2.C
// { dg-do compile { target c++14 } }

#include "Wnarrowing2.h"
// { dg-error "narrowing conversion" "" { target *-*-* } 0 }
